--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         <ul style="margin-left: 20px;">
                             <li>IEEE Fellow</li>
                             <li>IEEE Charles Babbage Award</li>
-                            <li>5 Achievement/Service/Honor Awards</li>
+                            <li>5 Conference Achievement/IEEE Service/DOE Honor Awards</li>
                             <li>2 R&D 100 Awards for innovative software</li>
                             <li>12 Best papers Finalists/Awards</li>
                             <li>300+ publications with 19,500+ citations</li>
