--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LR4E1SF6HQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LR4E1SF6HQ');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Franck Cappello - Professional CV</title>
@@ -487,7 +497,7 @@
                         <ul style="margin-left: 20px;">
                             <li>IEEE Fellow</li>
                             <li>IEEE Charles Babbage Award</li>
-                            <li>5 Conference Achievement/IEEE Service/DOE Honor Awards</li>
+                            <li>5 Achievement/Service/Honor Awards</li>
                             <li>2 R&D 100 Awards for innovative software</li>
                             <li>12 Best papers Finalists/Awards</li>
                             <li>300+ publications with 19,500+ citations</li>
