--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
                             <strong>IEEE Fellow</strong>
                         </div>
                         <div class="stat-item">
-                            <strong>19,500+</strong> Citations
+                            <strong>19,700+</strong> Citations
                         </div>
                         <div class="stat-item">
                             <strong>H-Index: 68</strong>
                         </div>
                         <div class="stat-item">
-                            <strong>>300</strong> Peer Reviewed Publications
+                            <strong>>300+</strong> Peer Reviewed Publications
                         </div>
                     </div>
                 </div>
