--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             <strong>H-Index: 68</strong>
                         </div>
                         <div class="stat-item">
-                            <strong>>300+</strong> Peer Reviewed Publications
+                            <strong>>300</strong> Peer Reviewed Publications
                         </div>
                     </div>
                 </div>
