Add ACM Fellow to the statistics section

--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
                             <strong>IEEE Fellow</strong>
                         </div>
                         <div class="stat-item">
+                            <strong>ACM Fellow</strong>
+                        </div>
+                        <div class="stat-item">
                             <strong>20,300+</strong> Citations
                         </div>
                         <div class="stat-item">
