Add ACM Fellow and other awards to index.html

--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
                     <div class="card-content">
                         <ul style="margin-left: 20px;">
                             <li>IEEE Fellow</li>
+                            <li>ACM Fellow</li>
                             <li>IEEE Charles Babbage Award</li>
                             <li>5 Achievement/Service/Honor Awards</li>
                             <li>2 R&D 100 Awards for innovative software</li>
@@ -630,6 +631,7 @@
                     <div class="collapsible-content">
                         <div class="card">
                             <ul style="margin-left: 20px;">
+                                <li><span class="badge badge-success">2025</span> ACM Fellow </li>
                                 <li><span class="badge badge-success">2024</span> IEEE Charles Babbage Award</li>
                                 <li><span class="badge badge-success">2024</span> Secretary of DOE Honor's Award</li>
                                 <li><span class="badge badge-success">2024</span> Europar Achievement Award</li>
