--- a/index.html
+++ b/index.html
@@ -514,13 +514,14 @@
                 <div class="card">
                     <div class="card-title">Current Focus Areas</div>
                     <div class="card-content">
-                        <div style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 10px;">
-                            <span class="badge badge-primary">LLMs Evaluation / LLMs for Science </span>
-                            <span class="badge badge-primary">Resilient High-Performance Parallel/Distributed Computing</span>
-                            <span class="badge badge-primary">Compression of Scientific Data</span>
-                        </div>
+                        <ul style="margin-left: 20px;">
+                            <li>AI for Science: LLMs, Hybrid Systems, Multi-Agent System Evaluation </li>
+                            <li>Resilient High-Performance Parallel/Distributed Computing</li>
+                            <li>Compression of Scientific Data</li>
+                        </ul>
                     </div>
-                </div>
+                  </div>
+
             </section>
 
             <!-- Education Section -->
