Add major accomplishments section to index.html

--- a/index.html
+++ b/index.html
@@ -511,6 +511,18 @@
                     </div>
                 </div>
 
+              <div class="card">
+                    <div class="card-title">Major Accomplishments</div>
+                    <div class="card-content">
+                        <ul style="margin-left: 20px;">
+                            <li>Large-scale Experimental Plateform for Parallel/Distributed Computing Research: Grid'5000 </li>
+                            <li>Fault tolerance and Resilience for Parallel/Distributed Systems</li>
+                            <li>Compression of Scientific Data</li>
+                            <li>Evaluation Methodology for AI Systems as Research Assistants</li>
+                        </ul>
+                    </div>
+                  </div>
+
                 <div class="card">
                     <div class="card-title">Current Focus Areas</div>
                     <div class="card-content">
